--- a/.github/workflows/nodetest.yaml
+++ b/.github/workflows/nodetest.yaml
@@ -14,5 +14,8 @@ jobs:
         with:
           node-version: "24"
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run tests
         run: node --test
