--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@tier4/cspell-dicts": "github:tier4/cspell-dicts",
+    "@types/node": "^25.0.2",
     "cspell": "^9.4.0",
     "cspell-lib": "^9.4.0"
   }
