--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@types/node": "^25.0.2",
     "cspell": "^9.4.0",
     "cspell-lib": "^9.4.0"
+  },
+  "dependencies": {
+    "@cspell/cspell-bundled-dicts": "^9.4.0"
   }
 }
