--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "@tier4/cspell-dicts": "github:tier4/cspell-dicts",
     "@types/node": "^25.0.2",
     "cspell": "^9.4.0",
     "cspell-lib": "^9.4.0"
   },
   "dependencies": {
-    "@cspell/cspell-bundled-dicts": "^9.4.0"
+    "@cspell/cspell-bundled-dicts": "^9.4.0",
+    "@tier4/cspell-dicts": "github:tier4/cspell-dicts"
   }
 }
