Fix test job name
Signed-off-by: f0reachARR <f0reach@f0reach.me>

--- a/.github/workflows/nodetest.yaml
+++ b/.github/workflows/nodetest.yaml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  pytest:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
