Specify paths to commit
Signed-off-by: f0reachARR <f0reach@f0reach.me>

--- a/.github/workflows/autoclean-cspell-dict.yaml
+++ b/.github/workflows/autoclean-cspell-dict.yaml
@@ -48,3 +48,5 @@ jobs:
 
             ${{ steps.cleanup.outputs.stdout }}
           labels: bot
+          signoff: true
+          add-paths: .cspell.json
