--- a/package.json
+++ b/package.json
@@ -2,5 +2,16 @@
   "name": "@tier4/autoware-spell-check-dict",
   "version": "0.1.0",
   "license": "Apache-2.0",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@biomejs/biome": "2.3.8",
+    "@types/node": "^25.0.2",
+    "cspell": "^9.4.0",
+    "cspell-lib": "^9.4.0"
+  },
+  "dependencies": {
+    "@cspell/cspell-bundled-dicts": "^9.4.0",
+    "@cspell/dict-en-gb": "^5.0.20",
+    "@tier4/cspell-dicts": "github:tier4/cspell-dicts"
+  }
 }
