--- a/.github/workflows/autoclean-cspell-dict.yaml
+++ b/.github/workflows/autoclean-cspell-dict.yaml
@@ -22,6 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Update upstream dictionaries
+        # Update to get the latest words from upstream dictionaries
+        # Note: Add more dictionaries here if more dependencies are added in the future
+        run: npm update @tier4/cspell-dicts @cspell/dict-en-gb @cspell/cspell-bundled-dicts
+
       - name: Run cleanup script
         id: cleanup
         run: |
