--- a/.github/workflows/autoclean-cspell-dict.yaml
+++ b/.github/workflows/autoclean-cspell-dict.yaml
@@ -54,4 +54,6 @@ jobs:
             ${{ steps.cleanup.outputs.stdout }}
           labels: bot
           signoff: true
-          add-paths: .cspell.json
+          add-paths: |
+            .cspell.json
+            package-lock.json
